--- a/index.html
+++ b/index.html
@@ -286,6 +286,10 @@
                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"/><polyline points="7 10 12 15 17 10"/><line x1="12" y1="15" x2="12" y2="3"/></svg>
                         ייצוא לקובץ
                     </button>
+                    <button class="btn-delete-all-small" onclick="openTagsManagementModal()">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M20.59 13.41l-7.17 7.17a2 2 0 0 1-2.83 0L2 12V2h10l8.59 8.59a2 2 0 0 1 0 2.82z"></path><line x1="7" y1="7" x2="7.01" y2="7"></line></svg>
+                        ניהול תגים
+                    </button>
                     <button class="btn-delete-all-small" onclick="deleteAllData()">
                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><polyline points="3 6 5 6 21 6"></polyline><path d="M19 6v14a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V6m3 0V4a2 2 0 0 1 2-2h4a2 2 0 0 1 2 2v2"></path><line x1="10" y1="11" x2="10" y2="17"></line><line x1="14" y1="11" x2="14" y2="17"></line></svg>
                         מחק הכל
@@ -319,7 +323,15 @@
                 <label class="form-label" id="amountLabel">סכום (₪)</label>
                 <input type="number" class="form-input" id="amountInput" placeholder="0.00" step="0.01">
             </div>
-
+            
+            <div class="form-group">
+                <label class="form-label">תגים</label>
+                <div class="tags-input-wrapper">
+                    <div id="tagsContainer" class="tags-container"></div>
+                    <input type="text" id="tagsInput" class="form-input" placeholder="הוסף תג ולחץ Enter...">
+                    <div id="tagsSuggestions" class="tags-suggestions"></div>
+                </div>
+            </div>
             <div class="loan-fields" id="loanFields">
                 <div class="form-group">
                     <label class="form-label">סכום הלוואה מקורי (₪)</label>
@@ -444,6 +456,17 @@
         </div>
     </div>
 
+    <div class="modal" id="tagsManagementModal">
+        <div class="modal-content">
+            <div class="modal-header">ניהול תגים</div>
+            <p style="text-align: center; margin-top: -16px; margin-bottom: 24px; color: var(--text-secondary);">כאן ניתן לערוך ולמחוק תגים קיימים באופן גלובלי.</p>
+            <div id="tagsManagementList" class="tags-management-list">
+                </div>
+            <div class="modal-actions">
+                <button class="modal-btn modal-btn-cancel" onclick="closeTagsManagementModal()">סגור</button>
+            </div>
+        </div>
+    </div>
     <script src="script.js"></script>
 </body>
 </html>
