--- a/index.html
+++ b/index.html
@@ -467,6 +467,16 @@
             </div>
         </div>
     </div>
+    <div class="modal" id="tagsOverflowModal">
+        <div class="modal-content modal-content-small">
+            <div class="modal-header" id="tagsOverflowModalTitle">כל התגים</div>
+            <div id="tagsOverflowModalList" class="tags-overflow-list">
+                </div>
+            <div class="modal-actions">
+                <button class="modal-btn modal-btn-cancel" onclick="closeOverflowTagsModal()">סגור</button>
+            </div>
+        </div>
+    </div>
     <script src="script.js"></script>
 </body>
 </html>
