--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
 <div class="summary-row balance-control-row">
     <div class="summary-row-label">
         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M2 12a10 10 0 1 0 20 0 10 10 0 0 0-20 0Z"/><path d="M12 18a6 6 0 1 0 0-12 6 6 0 0 0 0 12Z"/></svg>
-        עו״ש נוכחי
+        עו״ש בבנק
     </div>
     <div class="balance-control-wrapper">
         <button class="balance-control-btn" id="decrementBtn" title="הפחת">-</button>
