added charge day field in loan

--- a/index.html
+++ b/index.html
@@ -327,6 +327,10 @@
                     <label class="form-label">סכום הלוואה מקורי (₪)</label>
                     <input type="number" class="form-input" id="loanOriginalAmountInput" placeholder="10000.00" step="0.01">
                 </div>
+                <div class="form-group">
+                    <label class="form-label">יום חיוב בחודש</label>
+                    <input type="number" class="form-input" id="loanBillingDayInput" placeholder="למשל: 10 (עבור ה-10 לחודש)" min="1" max="31">
+                </div>
                 <div class="loan-row">
                     <div class="form-group" style="margin-bottom: 0;">
                         <label class="form-label">מספר תשלומים כולל</label>
