--- a/index.html
+++ b/index.html
@@ -280,6 +280,10 @@
                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M20.59 13.41l-7.17 7.17a2 2 0 0 1-2.83 0L2 12V2h10l8.59 8.59a2 2 0 0 1 0 2.82z"></path><line x1="7" y1="7" x2="7.01" y2="7"></line></svg>
                         ניהול תגים
                     </button>
+                    <button class="btn-delete-all-small" id="openShortfallCalcBtn" onclick="openShortfallModal()">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><circle cx="12" cy="12" r="10"></circle><line x1="10" y1="12" x2="14" y2="12"></line><line x1="12" y1="10" x2="12" y2="14"></line><line x1="12" y1="18" x2="12" y2="18.01"></line><line x1="12" y1="6" x2="12" y2="6.01"></line></svg>
+                        מחשבון חריגה
+                    </button>
                     <button class="btn-delete-all-small" onclick="deleteAllData()">
                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><polyline points="3 6 5 6 21 6"></polyline><path d="M19 6v14a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V6m3 0V4a2 2 0 0 1 2-2h4a2 2 0 0 1 2 2v2"></path><line x1="10" y1="11" x2="10" y2="17"></line><line x1="14" y1="11" x2="14" y2="17"></line></svg>
                         מחק הכל
@@ -288,7 +292,6 @@
             </div>
         </div>
     </div>
-
     <div class="modal" id="transactionModal">
         <div class="modal-content">
             <div class="modal-header" id="modalTitle">הוספת תנועה</div>
@@ -449,7 +452,6 @@
             </div>
         </div>
     </div>
-
     <div class="modal" id="tagsManagementModal">
         <div class="modal-content">
             <div class="modal-header">ניהול תגים</div>
@@ -471,6 +473,47 @@
             </div>
         </div>
     </div>
+    </div>
+</div>
+
+<div class="modal" id="shortfallModal">
+    <div class="modal-content" style="max-width: 450px;">
+        <div class="modal-header" id="shortfallModalTitle">מחשבון חריגת מסגרת</div>
+        
+        <div class="form-group">
+            <label class="form-label">מסגרת אשראי בעו״ש (₪)</label>
+            
+            <div class="negative-input-wrapper">
+                <span class="negative-sign-static">-</span>
+                <input type="number" class="form-input" id="overdraftLimitInput" 
+                       placeholder="5000" 
+                       step="100" 
+                       oninput="calculateShortfall()" 
+                       style="font-weight: 700; font-size: 1.2em; text-align: center; direction: ltr;" 
+                       min="0">
+            </div>
+            <p style="font-size: 12px; color: var(--text-secondary); text-align: center; margin-top: 8px;">
+                סכום המסגרת הוא תמיד שלילי (מינוס)
+            </p>
+        </div>
+
+        <div class="form-group" style="margin-bottom: 0;">
+            <label class="form-label" style="text-align: center;">עו"ש סופי צפוי</label>
+            <div class="summary-block-value" id="calcFinalBalance" style="font-size: 28px; text-align: center; padding-bottom: 10px; border-bottom: 2px solid var(--border-color);">₪0.00</div>
+        </div>
+
+        <div class="form-group" id="shortfallResultContainer" style="margin-top: 20px; text-align: center;">
+            <div class="summary-block-label" style="justify-content: center;">סכום חריגה מהמסגרת</div>
+            <div class="summary-block-value negative" id="overdraftAmountText" style="font-size: 32px;">
+                ₪0.00
+            </div>
+        </div>
+
+        <div class="modal-actions">
+            <button class="modal-btn modal-btn-cancel" onclick="closeShortfallModal()">סגור</button>
+        </div>
+    </div>
+</div>
     <script src="script.js"></script>
 </body>
 </html>
